lintian-brush (0.85) UNRELEASED; urgency=medium

  * Add fixer debian-watch-file-old-format.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 04 Nov 2020 02:47:58 +0000

lintian-brush (0.84) unstable; urgency=medium

  * Avoid loading overrides multiple times, handle renamed tags in
    overrides.
  * Don't remove the Testsuite header for packages compatible with dpkg
    < 1.17.1.
  * Automate updating of information about key packages in different
    releases.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 01 Nov 2020 17:41:16 +0000

lintian-brush (0.83) unstable; urgency=medium

  * Add guide on writing fixers to doc/.
  * Add fixer for newer-debconf-template - disabled for now.
  * Add fixer for field-name-typo-in-tests-control.
  * Set Security-Contact in debian/upstream/metadata when SECURITY.md is
    present.
  * apply-multiarch-hints: Fix typo in commit message: s/:all/:any/.
  * Require at least gpg 2.1, for import-export support.
  * Use --armor rather than --enarmor when converting signing-key.pgp
    files to signing-key.asc files. Thanks, Simon Josefsson, for
    reporting.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 29 Oct 2020 20:40:30 +0000

lintian-brush (0.82) unstable; urgency=medium

  * pkg-perl-vcs: Add fixer for team/pkg-perl/vcs/no-team-url and
    team/pkg-perl/vcs/no-git.
  * Add fixer for team/pkg-perl/testsuite/no-testsuite-header.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 12 Oct 2020 17:30:14 +0000

lintian-brush (0.81) unstable; urgency=medium

  [ Louis-Philippe Véronneau ]
  * Rename papt-dpmt-merged to python-teams-merged.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 04 Oct 2020 10:20:56 +0000

lintian-brush (0.80) unstable; urgency=medium

  * Fix changelog update detection when running lintian-brush in shallow
    git repositories.
  * Add guessing from repology. Closes: #959827
  * Add fixer for maintainer-script-empty.
  * Add deb-scrub-obsolete script for removing obsolete version constraints.